--- a/db.conf
+++ b/db.conf
@@ -4,5 +4,5 @@ return [
     'dbPass' => 'dba',
     'dbPort' => '1111',
     'useDocker' => true,
-    'dockerConteinerName' => 'virtuoso_cache',
+    'dockerContainerName' => 'virtuoso_cache',
 ];
