--- a/db.conf
+++ b/db.conf
@@ -3,6 +3,6 @@ return [
     'dbUser' => 'dba',
     'dbPass' => 'dba',
     'dbPort' => '1111',
-    'useDocker' => true,
+    'useDocker' => false,
     'dockerContainerName' => 'virtuoso_cache',
 ];
