Упростили использование, дописали инструкцию, сделали docker-compose

--- a/db.conf
+++ b/db.conf
@@ -4,5 +4,5 @@ return [
     'dbPass' => 'dba',
     'dbPort' => '1111',
     'useDocker' => false,
-    'dockerContainerName' => 'virtuoso_cache',
+    'dockerContainerName' => 'qrl_virtuoso',
 ];
