--- a/odbc.ini
+++ b/odbc.ini
@@ -1,9 +1,4 @@
 [VOS]
 Driver=/virtodbc.so
 Description=Virtuoso OpenSource Edition
-Address=virtuoso:1111
-
-[VOS_CACHE]
-Driver=/virtodbc.so
-Description=Virtuoso OpenSource Edition
-Address=virtuoso_cache:1111
+Address=qrl_virtuoso:1111
